src/test/deca/syntax/valid/custom/object/main.deca
{
    A a = new A() ;
    a.setX(1) ;
    println("a.getX() = ", a.getX()) ;
}