src/test/deca/syntax/invalid/custom/while_nopar.deca

{
while("expr"{
i = 2;
}
}